<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kendraslaptop.fontchooser.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sampleString"
        android:id="@+id/sampleString"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <TextView
        android:text="@string/small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textSize"
        android:layout_alignParentStart="true"
        android:id="@+id/smallText"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:text="@string/large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/largeText"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="36sp"
        android:layout_alignTop="@+id/textSize"
        android:layout_alignParentEnd="true" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/redSlider"
        android:layout_alignBottom="@+id/redLabel"
        android:max="255"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/smallText" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fontStyleDropDown"
        android:layout_below="@+id/textTypeFace"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/textStyle" />

    <TextView
        android:text="@string/chooseTypeface"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textTypeFace"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="14sp"
        android:layout_marginBottom="28dp"
        android:layout_above="@+id/typeFaceDropdown"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/chooseColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chooseColor"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="14sp"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/typeFaceDropdown"
        android:layout_marginBottom="38dp"
        android:hapticFeedbackEnabled="true"
        android:layout_above="@+id/chooseColor"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/textTypeFace" />

    <TextView
        android:text="@string/red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/redLabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="14sp"
        android:layout_below="@+id/chooseColor"
        android:layout_alignParentStart="true" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/greenSlider"
        android:max="255"
        android:layout_below="@+id/redSlider"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="18dp"
        android:layout_toEndOf="@+id/greenLabel" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/blueSlider"
        android:max="255"
        android:layout_below="@+id/greenSlider"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="13dp"
        android:layout_toEndOf="@+id/greenLabel" />

    <TextView
        android:text="@string/green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/greenLabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="14sp"
        android:layout_alignTop="@+id/greenSlider"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/blueLabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="14sp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/blueSlider" />

    <TextView
        android:text="@string/chooseSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textSize"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="14sp"
        android:layout_below="@+id/blueSlider"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textSizeBar"
        android:layout_below="@+id/textSize"
        android:layout_alignStart="@+id/blueSlider"
        android:layout_toStartOf="@+id/largeText" />

    <Button
        android:text="@string/saveChanges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="14dp"
        android:onClick="saveChanges"/>

    <TextView
        android:text="@string/chooseFontStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textStyle"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="14sp"
        android:layout_alignBaseline="@+id/textTypeFace"
        android:layout_alignBottom="@+id/textTypeFace"
        android:layout_toStartOf="@+id/largeText" />

</RelativeLayout>
